--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,14 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@300;400;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@300;400;800&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  padding: 0;
+}
 
 .row {
   display: flex;
   flex-wrap: nowrap;
   height: 100vh;
-  padding-left: 50px;
 }
 
 .side {
   flex: 45%;
+  background-image: url("./assets/bg-pizza_bg.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -55,11 +63,11 @@ header nav a {
   display: inline-block;
   color: #707070;
   text-decoration: none;
-  padding: 10px 30px;
+  padding: 10px 20px;
   line-height: normal;
-  font-size: 20px;
+  font-size: 17px;
   font-weight: bold;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 header nav a:hover {
@@ -68,9 +76,10 @@ header nav a:hover {
 
 .title {
   font-size: 100px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #241600;
   margin-bottom: 0;
+  margin-top: 40px;
 }
 
 .spaccing {
@@ -79,7 +88,7 @@ header nav a:hover {
 }
 
 .text_info {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 17px;
 }
 
@@ -113,7 +122,7 @@ footer {
   line-height: normal;
   font-size: 20px;
   font-weight: bold;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   padding-right: 30px;
   text-align: center;
 }
@@ -125,4 +134,97 @@ footer nav a {
 
 footer nav a img {
   width: 25px;
+}
+
+@media (max-width: 600px) {
+  .title {
+    font-size: 45px;
+    font-family: "Montserrat", sans-serif;
+    color: #241600;
+    margin-bottom: 0;
+    margin-top: 40px;
+    text-align: center;
+  }
+
+  .spaccing {
+    flex: 0%;
+    box-shadow: -41px 0px 38px #00000057;
+    visibility: hidden;
+  }
+
+  header {
+    display: none;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: nowrap;
+    height: 100vh;
+  }
+
+  .container_btn .btn button {
+    background: #fdb441 0% 0% no-repeat padding-box;
+    border-radius: 28px;
+    padding: 15px 15px;
+    color: white;
+    border: none;
+    font-size: 15px;
+    font-weight: 700;
+  }
+
+  .container_btn {
+    padding-top: 10px;
+    width: 100%;
+  }
+
+  .container_text_info {
+    width: 95%;
+  }
+
+  .text_info {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .sidebar {
+    width: 100%;
+    background: rgba(255, 255, 255, 0.7);
+    height: 100vh;
+  }
+
+  .content {
+    flex: 50%;
+    padding-left: 5px;
+    height: 100vh;
+    max-height: 100vh;
+  }
+
+  footer nav a img {
+    width: 15px;
+  }
+
+  footer {
+    color: #707070;
+    text-decoration: none;
+    padding: 10px 10px;
+    line-height: normal;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Montserrat", sans-serif;
+    padding-right: 30px;
+    text-align: center;
+  }
+
+  footer nav a {
+    display: inline-block;
+    padding: 9px;
+  }
+}
+
+@media (max-width: 380px) {
+  footer nav a {
+    display: inline-block;
+    padding: 5px;
+  }
 }
