--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
       <nav>
         <a href="#">Home</a>
         <a href="#">About us</a>
-        <a href="#">Menu</a>
+        <a href="/menu">Menu</a>
         <a href="#">Contact</a>
       </nav>
     </header>
