--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,8 +16,8 @@
       <nav>
         <a href="#">Home</a>
         <a href="#">About us</a>
-        <a href="#">Menu</a>
-        <a href="#">Contact</a>
+        <a routerLink="/menu">Menu</a>
+        <a routerLink="/contact">Contact</a>
       </nav>
     </header>
     <div>
