--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -20,15 +20,12 @@
         <a routerLink="/contact">Contact</a>
       </nav>
     </header>
-    <div>contacto</div>
+    <div class="contact">
+      <div class="contact__animation">
+        <ng-lottie [options]="options"> </ng-lottie>
+      </div>
+       <button class="contact__btn">CONTACT</button>
 
-    <footer>
-      <nav>
-        <a href="#"><img src="../../../assets/fb.svg" alt="" /></a>
-        <a href="#"><img src="../../../assets/ig.svg" alt="" /></a>
-        <a href="#"><img src="../../../assets/tw.svg" alt="" /></a>
-        <a href="#"><img src="../../../assets/yt.svg" alt="" /></a>
-      </nav>
-    </footer>
+    </div>
   </section>
 </div>
