--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -24,8 +24,18 @@
       <div class="contact__animation">
         <ng-lottie [options]="options"> </ng-lottie>
       </div>
-       <button class="contact__btn">CONTACT</button>
-
+      <form class="contact__form" [formGroup]="formContac" >
+        <label for="email">Correo</label>
+        <input name="email" formControlName="email" type="email" />
+        <label for="message">Mensaje</label>
+        <textarea
+          name="message"
+          cols="10"
+          rows="5"
+          formControlName="message"
+        ></textarea>
+      </form>
+      <button [disabled]="formContac.invalid" type="button" class="contact__btn">CONTACT</button>
     </div>
   </section>
 </div>
