--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,22 +1,28 @@
-<swiper
-  [effect]="'coverflow'"
-  [grabCursor]="true"
-  [centeredSlides]="true"
-  [slidesPerView]="'auto'"
-  [coverflowEffect]="{
-    rotate: 50,
-    stretch: 0,
-    depth: 100,
-    modifier: 1,
-    slideShadows: true
-  }"
-  [pagination]="true"
-  class="mySwiper"
->
-  <ng-template swiperSlide
-    ><img src="../../../assets/menu/menu1.png" /> </ng-template
-  ><ng-template swiperSlide
-    ><img src="../../../assets/menu/menu2.png" /> </ng-template
-  ><ng-template swiperSlide
-    ><img src="../../../assets/menu/menu3.png" /> </ng-template>
-</swiper>
+<div class="menu">
+
+  <swiper
+    [effect]="'coverflow'"
+    [grabCursor]="true"
+    [centeredSlides]="true"
+    [slidesPerView]="'auto'"
+    [coverflowEffect]="{
+      rotate: 50,
+      stretch: 0,
+      depth: 100,
+      modifier: 1,
+      slideShadows: true
+    }"
+    [pagination]="true"
+    class="mySwiper"
+  >
+    <ng-template swiperSlide
+      ><img src="../../../assets/menu/menu1.png" /> </ng-template
+    ><ng-template swiperSlide
+      ><img src="../../../assets/menu/menu2.png" /> </ng-template
+    ><ng-template swiperSlide
+      ><img src="../../../assets/menu/menu3.png" /> </ng-template>
+  </swiper>
+
+  <a class="menu__btn" href="../../../../assets/carta.pdf" download>
+   DOWNLOAD</a>
+</div>
