--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -1,21 +1,36 @@
-
 @import "swiper/css";
 @import "swiper/css/effect-coverflow";
 @import "swiper/css/pagination";
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@300;400;800&display=swap");
+
 .swiper {
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  height: 500px;
 }
 
 .swiper-slide {
   background-position: center;
   background-size: cover;
   width: 300px;
-  height: 300px;
+  height: 425px;
 }
 
 .swiper-slide img {
   display: block;
   width: 100%;
+}
+.menu {
+  text-align: center;
+  .menu__btn {
+    background: #fdb441 0% 0% no-repeat padding-box;
+    border-radius: 28px;
+    padding: 20px 45px;
+    color: white;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+
+  }
 }
