--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,14 +12,18 @@
   <div class="spaccing"></div>
 
   <section class="content">
-    <header>
+
+    <div class="topnav" id="myTopnav">
       <nav>
         <a href="#">Home</a>
         <a href="#">About us</a>
         <a routerLink="/menu">Menu</a>
         <a routerLink="/contact">Contact</a>
       </nav>
-    </header>
+      <a href="javascript:void(0);" class="icon" (click)="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
     <div>
       <h1 class="title">
         PIZZA <br />
