--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,6 +3,45 @@
 * {
   box-sizing: border-box;
 }
+
+.topnav {
+  padding-top: 30px;
+  padding-right: 20px;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: right;
+
+  color: #707070;
+  text-decoration: none;
+  padding: 10px 20px;
+  line-height: normal;
+  font-size: 17px;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
+}
+
+
+
 body {
   margin: 0;
   padding: 0;
@@ -57,17 +96,12 @@ header {
 
 header nav {
   float: right;
+  display: flex;
+  flex-direction: col;
 }
 
 header nav a {
-  display: inline-block;
-  color: #707070;
-  text-decoration: none;
-  padding: 10px 20px;
-  line-height: normal;
-  font-size: 17px;
-  font-weight: bold;
-  font-family: "Montserrat", sans-serif;
+
 }
 
 header nav a:hover {
@@ -140,8 +174,9 @@ footer nav a img {
 }
 
 @media (max-width: 600px) {
-
-  .side {flex: 40%;}
+  .side {
+    flex: 35%;
+  }
   .title {
     font-size: 45px;
     font-family: "Montserrat", sans-serif;
@@ -236,5 +271,29 @@ footer nav a img {
   }
   footer nav a img {
     width: 20px;
+  }
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
