--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="content_logo">
       <div class="sidebar">
         <div class="logo">
-          <img src="assets/Grupo 1.svg" alt="" />
+          <img src="assets/Grupo 1.svg" class="logo_img" alt="" />
         </div>
       </div>
     </div>
@@ -23,6 +23,9 @@
       <a href="javascript:void(0);" class="icon" (click)="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
+    </div>
+    <div>
+      <img src="../../assets/bg-pizza_bg.png" class="img_responsive" alt="">
     </div>
     <div>
       <h1 class="title">
