--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.img_responsive{
+  display: none;
+}
+
 .topnav {
   padding-top: 30px;
   padding-right: 20px;
@@ -11,7 +15,6 @@
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
   float: right;
 
@@ -29,18 +32,14 @@
   color: black;
 }
 
-/* Add an active class to highlight the current page */
 .topnav a.active {
   background-color: #04AA6D;
   color: white;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
   display: none;
 }
-
-
 
 body {
   margin: 0;
@@ -98,10 +97,6 @@ header nav {
   float: right;
   display: flex;
   flex-direction: col;
-}
-
-header nav a {
-
 }
 
 header nav a:hover {
@@ -174,8 +169,31 @@ footer nav a img {
 }
 
 @media (max-width: 600px) {
+
+  .img_responsive{
+    padding-top: 20px;
+    display: block;
+    position: relative;
+    object-fit: cover;
+    width: 100%;
+    height: auto;
+  }
+
+  .logo {
+    display: flex;
+    justify-content: left;
+    margin-top: 30px;
+    padding-left: 20px;
+  }
+
+  .logo_img{
+    width: 50px;
+  }
+
   .side {
-    flex: 35%;
+    flex: 0%;
+    background-image:none;
+    position: fixed;
   }
   .title {
     font-size: 45px;
@@ -190,6 +208,7 @@ footer nav a img {
     flex: 0%;
     box-shadow: -41px 0px 38px #00000057;
     visibility: hidden;
+    display: none;
   }
 
   header {
@@ -218,7 +237,9 @@ footer nav a img {
   }
 
   .container_text_info {
-    width: 95%;
+    width: 100%;
+    padding: 10px;
+    text-align: start;
   }
 
   .text_info {
@@ -229,13 +250,13 @@ footer nav a img {
 
   .sidebar {
     width: 100%;
-    background: rgba(255, 255, 255, 0.7);
-    height: 100vh;
+    background: transparent;
+    height: 0vh;
   }
 
   .content {
-    flex: 50%;
-    padding-left: 5px;
+    flex: 100%;
+    padding-left: 0px;
     height: 100vh;
     max-height: 100vh;
   }
@@ -252,6 +273,10 @@ footer nav a img {
     font-weight: bold;
     font-family: "Montserrat", sans-serif;
     text-align: center;
+    width: 100%;
+    padding-top: 25px;
+    padding-right: 0;
+    position: relative;
   }
 
   footer nav a {
@@ -274,7 +299,6 @@ footer nav a img {
   }
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
@@ -283,7 +307,6 @@ footer nav a img {
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
@@ -294,6 +317,6 @@ footer nav a img {
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+    text-align: right;
   }
 }
