--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -8,18 +8,10 @@
       </div>
     </div>
   </aside>
-
   <div class="spaccing"></div>
 
   <section class="content">
-    <header>
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">About us</a>
-        <a routerLink="/menu">Menu</a>
-        <a routerLink="/contact">Contact</a>
-      </nav>
-    </header>
+    <app-header></app-header>
     <div class="contact">
       <div class="contact__animation">
         <ng-lottie [options]="options"> </ng-lottie>
