Changes in menu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./style/elements/text-style.scss";
+@import "./style/variables/colors.scss";
+@import "./style/variables/fonts.scss";
+
+
 * {
     box-sizing: border-box;
   }
@@ -6,4 +11,6 @@
     margin: 0;
     padding: 0;
   }
-  
+  .modal__open {
+    overflow: hidden;
+  }
