--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@300;400;800&display=swap");
-
-* {
-  box-sizing: border-box;
-}
+@import "../../../style/variables/colors.scss";
+@import "../../../style/tools/base-breakpoints.scss";
 
 .img_responsive{
   display: none;
@@ -169,7 +167,23 @@ footer nav a img {
 }
 
 @media (max-width: 600px) {
+  .side,
+  .spaccing,
+  header {
+    display: none;
+  }
 
+  .row {
+    display: flex;
+    flex-wrap: nowrap;
+    height: 100vh;
+  }
+
+  .content {
+    padding-left: 5px;
+    height: 100vh;
+    max-height: 100vh;
+  }
   .img_responsive{
     padding-top: 20px;
     display: block;
@@ -300,23 +314,7 @@ footer nav a img {
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+.topnav{
+  display: none;
 }
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: right;
-  }
 }
