--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -2,10 +2,14 @@
 @import "swiper/css/effect-coverflow";
 @import "swiper/css/pagination";
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@300;400;800&display=swap");
+@import "../../../style/tools/base-breakpoints.scss";
 
 .swiper {
-  width: 500px;
+  width: 300px;
   height: 500px;
+  @include for-phone-up {
+    width: 500px;
+  }
 }
 
 .swiper-slide {
@@ -20,6 +24,7 @@
   width: 100%;
 }
 .menu {
+  margin-top: 24px;
   text-align: center;
   .menu__btn {
     background: #fdb441 0% 0% no-repeat padding-box;
@@ -31,7 +36,6 @@
     font-weight: 500;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-
   }
 }
 
@@ -102,10 +106,11 @@ header nav a:hover {
 }
 
 @media (max-width: 600px) {
-  .side, .spaccing, header {
+  .side,
+  .spaccing,
+  header {
     display: none;
   }
-
 
   .row {
     display: flex;
