--- a/src/style/elements/text-style.scss
+++ b/src/style/elements/text-style.scss
@@ -3,10 +3,10 @@
 
 h1, h2, h3, h4, h5, p {
   font-family: 'Montserrat', sans-serif;
-
 } 
 
 h6 {
+    font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 100;
   font-size: 16px;
