Home decoration line

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,8 +12,10 @@
   <div class="spaccing"></div>
 
   <section class="content">
-
     <div class="topnav" id="myTopnav">
+      <div class="decorationLine">
+        <hr class="decorationLine" />
+      </div>
       <nav>
         <a href="#">Home</a>
         <a href="#">About us</a>
@@ -25,7 +27,7 @@
       </a>
     </div>
     <div>
-      <img src="../../assets/bg-pizza_bg.png" class="img_responsive" alt="">
+      <img src="../../assets/bg-pizza_bg.png" class="img_responsive" alt="" />
     </div>
     <div>
       <h1 class="title">
