--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,6 +6,14 @@
   display: none;
 }
 
+.decorationLine{
+  background-color: #b5b5b5;
+  color: #b5b5b5;
+  height: 3px;
+  margin-bottom: 5px;
+  width: 100%;
+}
+
 .topnav {
   padding-top: 30px;
   padding-right: 20px;
@@ -14,8 +22,7 @@
 }
 
 .topnav a {
-  float: right;
-
+  float: left;
   color: #707070;
   text-decoration: none;
   padding: 10px 20px;
@@ -26,8 +33,8 @@
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: rgb(255, 255, 255);
+  color: #FDB441;
 }
 
 .topnav a.active {
