--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -4,6 +4,48 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@300;400;800&display=swap");
 @import "../../../style/tools/base-breakpoints.scss";
 
+
+.decorationLine{
+  background-color: #b5b5b5;
+  color: #b5b5b5;
+  height: 3px;
+  margin-bottom: 5px;
+  width: 100%;
+}
+
+.topnav {
+  padding-top: 30px;
+  padding-right: 20px;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: right;
+  color: #707070;
+  text-decoration: none;
+  padding: 10px 20px;
+  line-height: normal;
+  font-size: 17px;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+}
+
+.topnav a:hover {
+  background-color: rgb(255, 255, 255);
+  color: #FDB441;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+
 .swiper {
   width: 300px;
   height: 500px;
