--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,35 @@
-
 <app-menu></app-menu>
-<router-outlet></router-outlet>
+
+<div class="container">
+  <aside class="container__side">
+    <div class="container__side-logo">
+      <div class="sidebar">
+        <div class="logo">
+          <img src="assets/Grupo 1.svg" class="logo_img" alt="" />
+        </div>
+      </div>
+    </div>
+  </aside>
+  <section class="container__content">
+    <div class="container__content-topnav" id="myTopnav">
+      <nav>
+        <div class="nav__bar">
+          <a
+          routerLink="/{{ item.url }}"
+            routerLinkActive
+            #rla="routerLinkActive"
+            [class.active]="rla.isActive"
+            *ngFor="let item of itemsMenu"
+            >{{item.name}}</a
+          >
+        </div>
+      </nav>
+      <a href="javascript:void(0);" class="icon" (click)="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    <div class="container__content-pages">
+      <router-outlet></router-outlet>
+    </div>
+  </section>
+</div>
