--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,32 +1,19 @@
-<div class="row">
-  <aside class="side">
-    <div class="content_logo">
-      <div class="sidebar">
-        <div class="logo">
-          <img src="./assets/Grupo 1.svg" alt="" />
-        </div>
-      </div>
-    </div>
-  </aside>
-  <div class="spaccing"></div>
-
-  <section class="content">
-    <div class="contact">
-      <div class="contact__animation">
-        <ng-lottie [options]="options"> </ng-lottie>
-      </div>
-      <form class="contact__form" [formGroup]="formContac" >
-        <label for="email">Correo</label>
-        <input name="email" formControlName="email" type="email" />
-        <label for="message">Mensaje</label>
-        <textarea
-          name="message"
-          cols="10"
-          rows="5"
-          formControlName="message"
-        ></textarea>
-      </form>
-      <button [disabled]="formContac.invalid" type="button" class="contact__btn">CONTACT</button>
-    </div>
-  </section>
+<div class="contact">
+  <div class="contact__animation">
+    <ng-lottie [options]="options"> </ng-lottie>
+  </div>
+  <form class="contact__form" [formGroup]="formContac">
+    <label for="email">Correo</label>
+    <input name="email" formControlName="email" type="email" />
+    <label for="message">Mensaje</label>
+    <textarea
+      name="message"
+      cols="10"
+      rows="5"
+      formControlName="message"
+    ></textarea>
+  </form>
+  <button [disabled]="formContac.invalid" type="button" class="contact__btn">
+    CONTACT
+  </button>
 </div>
