--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,8 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@300;400;800&display=swap");
-
-
 .contact {
   text-align: center;
+  margin: 24px;
   &__animation{
     width: 200px;
     display: flex;
@@ -41,93 +39,3 @@
     }
   }
 }
-////
-.row {
-  display: flex;
-  flex-wrap: nowrap;
-  height: 100vh;
-}
-
-.side {
-  flex: 45%;
-  background-image: url("../../../assets/bg-pizza_bg.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.content {
-  flex: 45%;
-  padding-left: 30px;
-  height: 100vh;
-  max-height: 100vh;
-}
-
-.content_logo {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.sidebar {
-  width: 30%;
-  background: rgba(255, 255, 255, 0.718);
-  height: 100vh;
-}
-
-.logo {
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-}
-
-header {
-  width: 100%;
-  overflow: hidden;
-  padding-bottom: 20px;
-  padding-top: 80px;
-  padding-right: 70px;
-  text-align: right;
-}
-
-header nav {
-  float: right;
-}
-
-header nav a {
-  display: inline-block;
-  color: #707070;
-  text-decoration: none;
-  padding: 10px 20px;
-  line-height: normal;
-  font-size: 17px;
-  font-weight: bold;
-  font-family: "Montserrat", sans-serif;
-}
-
-header nav a:hover {
-  color: #fdb441;
-}
-
-@media (max-width: 600px) {
-.contact{
-  padding: 10px;
-}
-
-  .side, .spaccing, header {
-    display: none;
-  }
-
-
-  .row {
-    display: flex;
-    flex-wrap: nowrap;
-    height: 100vh;
-  }
-
-  .content {
-    padding-left: 5px;
-    height: 100vh;
-    max-height: 100vh;
-  }
-}
-
