--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,58 +1,22 @@
-<div class="row">
-  <aside class="side">
-    <div class="content_logo">
-      <div class="sidebar">
-        <div class="logo">
-          <img src="assets/Grupo 1.svg" class="logo_img" alt="" />
-        </div>
-      </div>
-    </div>
-  </aside>
-
-  <div class="spaccing"></div>
-
-  <section class="content">
-    <div class="topnav" id="myTopnav">
-      <div class="decorationLine">
-        <hr class="decorationLine" />
-      </div>
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">About us</a>
-        <a routerLink="/menu">Menu</a>
-        <a routerLink="/contact">Contact</a>
-      </nav>
-      <a href="javascript:void(0);" class="icon" (click)="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
-    <div>
-      <img src="../../assets/bg-pizza_bg.png" class="img_responsive" alt="" />
-    </div>
-    <div>
-      <h1 class="title">
-        PIZZA <br />
-        TOWN
-      </h1>
-    </div>
-    <div class="container_text_info">
-      <p class="text_info">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
-        exercitationem quam dolorem molestias tempore ratione repellendus
-        repellat
-      </p>
-    </div>
-    <div class="container_btn">
-      <div class="btn"><button class="">ORDER NOW</button></div>
-    </div>
-
-    <footer>
-      <nav>
-        <a href="#"><img src="../../assets/fb.svg" alt="" /></a>
-        <a href="#"><img src="../../assets/ig.svg" alt="" /></a>
-        <a href="#"><img src="../../assets/tw.svg" alt="" /></a>
-        <a href="#"><img src="../../assets/yt.svg" alt="" /></a>
-      </nav>
-    </footer>
-  </section>
+<div class="home">
+  <div class="home__header">
+    <img src="../../assets/bg-pizza_bg.png" class="img_responsive" alt="" />
+  </div>
+  <div class="home__body">
+    <h1 class="home__body-title">
+      PIZZA <br />
+      TOWN
+    </h1>
+    <p class="home__body-text">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+      exercitationem quam dolorem molestias tempore ratione repellendus repellat
+    </p>
+    <button class="home__body-button">ORDER NOW</button>
+  </div>
+  <div class="home__footer">
+    <a href="#"><img src="../../assets/fb.svg" alt="" /></a>
+    <a href="#"><img src="../../assets/ig.svg" alt="" /></a>
+    <a href="#"><img src="../../assets/tw.svg" alt="" /></a>
+    <a href="#"><img src="../../assets/yt.svg" alt="" /></a>
+  </div>
 </div>
