--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,326 +2,86 @@
 @import "../../../style/variables/colors.scss";
 @import "../../../style/tools/base-breakpoints.scss";
 
-.img_responsive{
-  display: none;
-}
-
-.decorationLine{
-  background-color: #b5b5b5;
-  color: #b5b5b5;
-  height: 3px;
-  margin-bottom: 5px;
-  width: 100%;
-}
-
-.topnav {
-  padding-top: 30px;
-  padding-right: 20px;
-  background-color: #fff;
-  overflow: hidden;
-}
-
-.topnav a {
-  float: left;
-  color: #707070;
-  text-decoration: none;
-  padding: 10px 20px;
-  line-height: normal;
-  font-size: 17px;
-  font-weight: bold;
-  font-family: "Montserrat", sans-serif;
-}
-
-.topnav a:hover {
-  background-color: rgb(255, 255, 255);
-  color: #FDB441;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.row {
+.home {
+  height: 100%;
   display: flex;
-  flex-wrap: nowrap;
-  height: 99vh;
-}
-
-.side {
-  flex: 45%;
-  background-image: url("../../../assets/bg-pizza_bg.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.content {
-  flex: 45%;
-  padding-left: 30px;
-  height: 100vh;
-  max-height: 100vh;
-}
-
-.content_logo {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.sidebar {
-  width: 30%;
-  background: rgba(255, 255, 255, 0.718);
-  height: 100vh;
-}
-
-.logo {
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-}
-
-header {
-  width: 100%;
-  overflow: hidden;
-  padding-bottom: 20px;
-  padding-top: 80px;
-  padding-right: 70px;
-  text-align: right;
-}
-
-header nav {
-  float: right;
-  display: flex;
-  flex-direction: col;
-}
-
-header nav a:hover {
-  color: #fdb441;
-}
-
-.title {
-  font-size: 100px;
-  font-family: "Montserrat", sans-serif;
-  color: #241600;
-  margin-bottom: 0;
-  margin-top: 40px;
-}
-
-.spaccing {
-  flex: 10%;
-  box-shadow: -41px 0px 38px #00000057;
-}
-
-.text_info {
-  font-family: "Montserrat", sans-serif;
-  font-size: 17px;
-}
-
-.container_text_info {
-  width: 65%;
-}
-
-.container_btn {
-  padding-top: 30px;
-  width: 65%;
-}
-
-.container_btn .btn {
-  text-align: left;
-}
-
-.container_btn .btn button {
-  background: #fdb441 0% 0% no-repeat padding-box;
-  border-radius: 28px;
-  padding: 20px 45px;
-  color: white;
-  border: none;
-  font-size: 18px;
-  font-weight: 900;
-}
-
-footer {
-  position: fixed;
-  z-index: 9;
-  right: 50;
-  bottom: 0%;
-  color: #707070;
-  text-decoration: none;
-  line-height: normal;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: "Montserrat", sans-serif;
-  padding-right: 30px;
-  text-align: center;
-}
-
-footer nav a {
-  display: inline-block;
-  padding: 20px;
-}
-
-footer nav a img {
-  width: 25px;
-}
-
-@media (max-width: 600px) {
-  .side,
-  .spaccing,
-  header {
-    display: none;
+  flex-direction: column;
+  @include for-phone-up {
+    padding-top: 88px;
   }
+  &__header {
+    @include for-mobile {
+      height: 200px;
+    }
 
-  .row {
-    display: flex;
-    flex-wrap: nowrap;
-    height: 100vh;
+    img {
+      display: block;
+      position: relative;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      @include for-phone-up {
+        display: none;
+      }
+    }
   }
-
-  .content {
-    padding-left: 5px;
-    height: 100vh;
-    max-height: 100vh;
-  }
-  .img_responsive{
-    padding-top: 20px;
-    display: block;
-    position: relative;
-    object-fit: cover;
-    width: 100%;
-    height: auto;
-  }
-
-  .logo {
-    display: flex;
-    justify-content: left;
-    margin-top: 30px;
-    padding-left: 20px;
-  }
-
-  .logo_img{
-    width: 50px;
-  }
-
-  .side {
-    flex: 0%;
-    background-image:none;
-    position: fixed;
-  }
-  .title {
-    font-size: 45px;
+  &__body {
+    text-align: center;
     font-family: "Montserrat", sans-serif;
-    color: #241600;
-    margin-bottom: 0;
-    margin-top: 40px;
-    text-align: center;
+    @include for-phone-up {
+      margin: auto;
+      width: 360px;
+    }
+    &-title {
+      font-size: 70px;
+      line-height: 70px;
+      text-align: center;
+      color: #241600;
+      margin: 0;
+      letter-spacing: 0px;
+      font-weight: 800;
+      padding-top: 50px;
+      @include for-phone-up {
+        padding-top: 0px;
+        font-size: 110px;
+        text-align: left;
+        line-height: 110px;
+      }
+    }
+    &-text {
+      font-size: 14px;
+      text-align: left;
+      color: #241600;
+      line-height: 20px;
+      margin: 0;
+      letter-spacing: 0px;
+      font-weight: 300;
+      margin: 24px;
+      @include for-phone-up {
+        margin: 24px 0 36px 0;
+      }
+    }
+    &-button {
+      background: #fdb441 0% 0% no-repeat padding-box;
+      border-radius: 28px;
+      padding: 20px 45px;
+      color: white;
+      border: none;
+      font-size: 18px;
+      font-weight: 900;
+    }
   }
-
-  .spaccing {
-    flex: 0%;
-    box-shadow: -41px 0px 38px #00000057;
-    visibility: hidden;
-    display: none;
-  }
-
-  header {
-    display: none;
-  }
-
-  .row {
+  &__footer {
     display: flex;
-    flex-wrap: nowrap;
-    height: 100vh;
+    justify-content: end;
+    margin: auto 0 42px 0;
+    a {
+      text-decoration: none;
+      margin: 0 30px;
+      img {
+        height: 14px;
+        width: 100%;
+      }
+    }
   }
-
-  .container_btn .btn button {
-    background: #fdb441 0% 0% no-repeat padding-box;
-    border-radius: 28px;
-    padding: 15px 15px;
-    color: white;
-    border: none;
-    font-size: 15px;
-    font-weight: 700;
-  }
-
-  .container_btn {
-    padding-top: 10px;
-    width: 100%;
-  }
-
-  .container_text_info {
-    width: 100%;
-    padding: 10px;
-    text-align: start;
-  }
-
-  .text_info {
-    font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    text-align: center;
-  }
-
-  .sidebar {
-    width: 100%;
-    background: transparent;
-    height: 0vh;
-  }
-
-  .content {
-    flex: 100%;
-    padding-left: 0px;
-    height: 100vh;
-    max-height: 100vh;
-  }
-
-  footer nav a img {
-    width: 20px;
-  }
-
-  footer {
-    color: #707070;
-    text-decoration: none;
-    line-height: normal;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: "Montserrat", sans-serif;
-    text-align: center;
-    width: 100%;
-    padding-top: 25px;
-    padding-right: 0;
-    position: relative;
-  }
-
-  footer nav a {
-    display: inline-block;
-    padding: 9px;
-  }
-
-  .container_btn .btn {
-    text-align: center;
-  }
-}
-
-@media (max-width: 380px) {
-  footer nav a {
-    display: inline-block;
-    padding: 5px;
-  }
-  footer nav a img {
-    width: 20px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-.topnav{
-  display: none;
-}
 }
