--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,12 @@
-<p>about works!</p>
+<div class="contact">
+    <br>
+  <div class="home__img">
+    <img src="../../assets/perfil.jfif" class="img_responsive" alt="" />
+  </div>
+
+  <h3>
+    Desarrollador Full Stack
+  </h3>
+
+  <button class="contact__btn">Descargar</button>
+</div>
