--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -7,6 +7,11 @@
   <h3>
     Desarrollador Full Stack
   </h3>
+  <h4>Soy un desarrollador de software, creativo, innovador y dedicado a mi trabajo</h4>
+  <br>
+  <br>
 
-  <button class="contact__btn">Descargar</button>
+  <a class="menu__btn" href="../../../../assets/carta.pdf" download>
+    DOWNLOAD</a
+  >
 </div>
