--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,11 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@300;400;800&display=swap");
+@import "../../../style/variables/colors.scss";
+@import "../../../style/tools/base-breakpoints.scss";
+
 .contact {
-    img {
+      @include for-mobile {
+        height: 200px;
+      }
+  
+      img {
+        margin: auto;
         display: block;
         position: relative;
         object-fit: cover;
         width: 100%;
         height: 100%;
         border-radius: 25px;
+        @include for-phone-up {
+          display: block;
+          width: 40%;
+        }
       }
    
     text-align: center;
@@ -47,5 +60,23 @@
         border: 1px solid #b9b7b7;
       }
     }
+
+    .menu__btn {
+        background: #fdb441 0% 0% no-repeat padding-box;
+        border-radius: 28px;
+        padding: 20px 45px;
+        color: white;
+        border: none;
+        font-size: 18px;
+        font-weight: 500;
+        text-decoration: none;
+        font-family: "Montserrat", sans-serif;
+        margin-top: 24px;
+      }
+    .menu {
+        margin-top: 24px;
+        text-align: center;
+        
+      }
   }
   
