--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -11,7 +11,7 @@
   <br>
   <br>
 
-  <a class="menu__btn" href="../../../../assets/carta.pdf" download>
+  <a class="menu__btn" href="../../../../assets/CV-Brayan Javier Gomez.pdf" download>
     DOWNLOAD</a
   >
 </div>
