--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,17 +1,18 @@
-<div class="contact">
+<div class="about">
     <br>
-  <div class="home__img">
+  <div class="about__img">
     <img src="../../assets/perfil.jfif" class="img_responsive" alt="" />
   </div>
 
   <h3>
     Desarrollador Full Stack
   </h3>
-  <h4>Soy un desarrollador de software, creativo, innovador y dedicado a mi trabajo</h4>
-  <br>
-  <br>
+  <p class="about_desc">Soy un desarrollador de software, creativo, innovador y dedicado a mi trabajo</p>
 
-  <a class="menu__btn" href="../../../../assets/CV-Brayan Javier Gomez.pdf" download>
-    DOWNLOAD</a
-  >
+  <div class="about__container">
+    <a class="about__btn" href="../../../../assets/CV-Brayan Javier Gomez.pdf" download>
+        DOWNLOAD</a
+      >
+  </div>
+  
 </div>
