--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -2,7 +2,7 @@
 @import "../../../style/variables/colors.scss";
 @import "../../../style/tools/base-breakpoints.scss";
 
-.contact {
+.about {
       @include for-mobile {
         height: 200px;
       }
@@ -20,7 +20,10 @@
           width: 40%;
         }
       }
-   
+    &_desc{
+        font-weight: 600;
+        padding: 24px;
+    }
     text-align: center;
     margin: 24px;
     &__animation{
@@ -61,7 +64,7 @@
       }
     }
 
-    .menu__btn {
+    .about__btn {
         background: #fdb441 0% 0% no-repeat padding-box;
         border-radius: 28px;
         padding: 20px 45px;
@@ -71,12 +74,11 @@
         font-weight: 500;
         text-decoration: none;
         font-family: "Montserrat", sans-serif;
-        margin-top: 24px;
+        margin-top: 30px;
       }
-    .menu {
+
+      .about__container{
         margin-top: 24px;
-        text-align: center;
-        
       }
   }
   
